Fix search field focus on mobile Chrome

--- a/src/scss/header-v2/_search.scss
+++ b/src/scss/header-v2/_search.scss
@@ -86,7 +86,6 @@
 
 		&:focus,
 		&:active {
-			@include oColorsFor(nav, background);
 			outline: none;
 			border: 0;
 			box-shadow: inset 0 0 3px 1px oColorsGetColorFor(nav-separator, border);
@@ -130,6 +129,7 @@
 		height: 100%;
 		overflow: hidden;
 		font-size: 70%;
+		z-index: -1;
 
 		@include oGridRespondTo(S) {
 			font-size: 100%;
